[package]
name = "xcrust"
version = "0.1.0"
authors = ["Greg Hale <imalsogreg@gmail.com>"]
edition = "2018"

[dependencies]
clap   = "2.33.0"
chrono = "0.4.7"
failure = "0.1.5"
nom = "5.0.0"
num = "0.2.0"
num-traits = "0.2.8"
num-derive = "0.2.5"

[lib]
name = "xcrust"
src  = "src/lib.rs"

[[bin]]
name = "xcrust-cat-spikes"

[[bin]]
name = "xcrust-cat-pos"
